syntax = "proto3";

option go_package = "github.com/xvbnm48/grpc-basic/protogen/jobsearch";

import "proto/basic/application.proto";
import "proto/dummy/application.proto";

// komen

message JobCandiate {
    uint32 job_candidate_id = 1 [json_name = "jobCandidate_id"];
    the.dummy.Application application = 2;
}

message JobSoftaware {
    uint32 job_software_id = 1 [json_name = "jobSoftware_id"];
    the.basic.Application application = 3;
}